# skill-federation

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  install.md  install.ps1  install.sh
.github/workflows/: release-npm.yml  release-pypi.yml
installer/: README.md  cli.mjs  package.json
integrations/: local_skills.py  sample_wishlist.json  search_wishlist.py  skillfed_client.py
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/commands/: skillfed.md
integrations/claude-code/hooks/: hooks.json  on_plan_approved.py  plan_nudge.json
integrations/claude-code/skills/skill-federation/: SKILL.md  demand-sketch.md
mcp-server/: README.md  federation.mjs  findSkills.mjs  index.mjs  localSkills.mjs  package.json
python-installer/: README.md  pyproject.toml
python-installer/src/skillfed/: __init__.py  cli.py
scripts/: vendor-payload.mjs
